--- a/style.css
+++ b/style.css
@@ -135,6 +135,10 @@ nav a{color:white;text-decoration:none;}
   border-radius:15px;
   transition:0.3s;
 }
+.project-card {
+  margin-bottom: 30px;
+}
+
 .project-card:hover{transform:scale(1.03);}
 .project-card a{color:#38bdf8;text-decoration:none;}
 
